HEAD
	+ Set version to 8.0.0
	+ Update openssl.cnf file
	+ Add initial-setup script
7.1.0
	+ Bump version number
7.0.1
	+ Fix .rnd file creation
7.0.0
	+ Fix deprecated openssl dependency
	+ Set version number to 7.0.0
6.2.1
	+ Fix SSL configuration conflicts between CA and Virt modules
6.2.0
	+ Set version number to 6.2.0
6.1.1
	Change CRL expiration days to 3650 according to the OpenVPN recommendations
6.1
	+ Set version to 6.1
6.0.1
	+ Fix issue related with CRL cert and upgrade from 5.1
6.0
	+ Use openssl1.0 for backwards compatibility
	+ Fix Mason template paths
5.1
	+ Fix module restart in postinst
5.0
	+ Use SHA256 by default
4.2.1
	+ Set up services certificates when a new CA is created
4.2
	+ Update version to 4.2
4.1
	+ Set version to 4.1
4.0.2
	+ Allow service certificate to specify that need the CA certificate
4.0.1
	+ Fix problems with some translations on common name with non-ASCII chars
	+ RevokeCertificate page redirects properly after save changes
	+ Added new CA::Observer::certificateRevokeDone and call it after revoke
	+ Fixed bug in generating certificate when openchange module is
	  not installed
	+ Added missing zip dependency
	+ EBox::CA::checkCertificateFieldsCharacters is now a public method
4.0
	+ Protect openchange certificate for manipulation which could rend
	  it invalid
	+ Optional CA fields now have default values to avoid OpenChange problems
	+ Remove old request file before generating a new one
	+ Better recovery of errors on index CGI
	+ Set version to 4.0
	+ Download files as zip archive
3.5
	+ Use 2048 RSA key lengths to increase security
	+ Fixed glitch on reloading page after creating CA
	+ Fixed CGI error on page reloads
	+ Allow wildcard certificate in service certificates
	+ Better CN for CA certificate
	+ Use different openssl output files to avoid any overlap
	+ Set version to 3.5
3.4
	+ Migrated to use Plack / PSGI API instead of the CGI one
	+ Use service instead of deprecated invoke-rc.d for init.d scripts