@@ -86,7 +86,7 @@ dir		=  /var/lib/zentyal/CA		# Where everything is kept
 certs		= $dir/certs		# Where the issued certs are kept
 crl_dir		= $dir/crl		# Where the issued crl are kept
 database	= $dir/index.txt	# database index file.
-#unique_subject	= no			# Set to 'no' to allow creation of
+unique_subject	= no			# Set to 'no' to allow creation of
 					# several certs with same subject.
 new_certs_dir	= $dir/newcerts		# default place for new certs.
 
@@ -113,14 +113,16 @@ cert_opt 	= ca_default		# Certificate field options
 # crl_extensions	= crl_ext
 
 default_days	= 365			# how long to certify for
-default_crl_days= 3560			# how long before next CRL
-default_md	= default		# use public key default MD
+default_crl_days= 365			# how long before next CRL
+default_md	= sha256		# use public key default MD
 preserve	= no			# keep passed DN ordering
 
 # A few difference way of specifying how similar the request should look
 # For type CA, the listed attributes must be the same, and the optional
 # and supplied fields are just that :-)
 policy		= policy_match
+
+x509_extensions = CA_default_extensions
 
 # For the CA policy
 [ policy_match ]
@@ -240,6 +242,14 @@ authorityKeyIdentifier=keyid,issuer
 
 basicConstraints = CA:FALSE
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
+
+[ CA_default_extensions ]
+
+basicConstraints = CA:false
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always
+keyUsage = digitalSignature,keyEncipherment
+extendedKeyUsage = serverAuth
 
 [ v3_ca ]
 
