@@ -2,6 +2,9 @@ HEAD
 	+ Set version to 8.0.0
 	+ Update openssl.cnf file
 	+ Add initial-setup script
+	+ Avoid to use Openssl shell
+	+ Fix permission errors
+	+ Update openssl version
 7.1.0
 	+ Bump version number
 7.0.1
